# Farfocel

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  log.txt  log_file.txt  premake5.lua
Farfocel/: CMakeLists.txt  premake5.lua
Farfocel/include/Animation/: Animation.hpp  AnimationManager.hpp
Farfocel/include/Core/: Farfocel.hpp  Runtime.hpp
Farfocel/include/Farfocel/: Farfocel.hpp
Farfocel/include/Farfocel/Common/: AnimationManager.hpp  Console.hpp  EventManager.hpp  InputManager.hpp  ResourceManager.hpp  SceneManager.hpp
Farfocel/include/Farfocel/Common/GUI/: Container.hpp  ContainerColumn.hpp  GUIManager.hpp  Interactible.hpp  Style.hpp  Widget.hpp
Farfocel/include/Farfocel/Common/GUI/Widgets/: Button.hpp  Text.hpp
Farfocel/include/Farfocel/Core/: EntryPoint.hpp  Renderer.hpp  Runtime.hpp  Window.hpp
Farfocel/include/Farfocel/Managers/: EventManager.hpp  InputManager.hpp
Farfocel/include/Farfocel/Utils/: Animation.hpp  FunctionCallback.hpp  IScene.hpp  Log.hpp  TextureAtlas.hpp
Farfocel/include/Function/: EventManager.hpp  FunctionBinder.hpp  InputManager.hpp
Farfocel/include/Resource/: AssetStorer.hpp  ResourceManager.hpp  TextureAtlas.hpp
Farfocel/include/Scene/: IScene.hpp  SceneManager.hpp
Farfocel/libs/SFML/lib/Debug/: sfml-main-d.lib  sfml-system-s-d.lib
Farfocel/libs/SFML/lib/Release/: sfml-audio-s.lib  sfml-graphics-s.lib  sfml-main.lib  sfml-network-s.lib  sfml-system-s.lib  sfml-window-s.lib
Farfocel/src/Animation/: AnimationManager.cpp
Farfocel/src/Core/: Runtime.cpp
Farfocel/src/Farfocel/Common/: AnimationManager.cpp  Console.cpp  EventManager.cpp  InputManager.cpp  ResourceManager.cpp  SceneManager.cpp
Farfocel/src/Farfocel/Common/GUI/: Container.cpp  GUIManager.cpp  Widget.cpp
Farfocel/src/Farfocel/Common/GUI/Widgets/: Button.cpp  Text.cpp
Farfocel/src/Farfocel/Core/: Renderer.cpp  Runtime.cpp  Window.cpp
Farfocel/src/Farfocel/Managers/: InputManager.cpp
Farfocel/src/Function/: EventManager.cpp  InputManager.cpp
Farfocel/src/Resource/: ResourceManager.cpp
Farfocel/src/Scene/: SceneManager.cpp
FarfocelEngine/: log.txt  premake5.lua
FarfocelEngine/include/: Application.hpp  Asset.hpp  EntryPoint.hpp  Farfocel.hpp  IState.hpp  Log.hpp  ResourceManager.hpp  StateManager.hpp  TextureAtlas.hpp
FarfocelEngine/src/: AnimationManager.cpp  EntryPoint.hpp  Farfocel.hpp  ResourceManager.cpp
FarfocelEngine/src/Farfocel/: Application.cpp  Application.hpp
FarfocelEngine/src/Farfocel/Utils/: EventManager.cpp  EventManager.hpp  FunctionBinder.hpp  FunctionBinding.hpp  InputManager.cpp  InputManager.hpp  Log.cpp  Log.hpp  StartupConfigurationFile.hpp
FarfocelEngine/src/Farfocel/Utils/AnimationManager/: Animation.hpp  AnimationManager.cpp  AnimationManager.hpp  TextureAtlas.hpp
FarfocelEngine/src/Farfocel/Utils/ResourceManager/: Asset.hpp  AssetManager.hpp  ResourceManager.cpp  ResourceManager.hpp
FarfocelEngine/src/Farfocel/Utils/StateManager/: IState.hpp  StateManager.cpp  StateManager.hpp
SFML/lib/Debug/: sfml-main-d.lib  sfml-system-s-d.lib
SFML/lib/Release/: sfml-audio-s.lib  sfml-graphics-s.lib  sfml-main.lib  sfml-network-s.lib  sfml-system-s.lib  sfml-window-s.lib
Sandbox/: CMakeLists.txt  log_file.txt  premake5.lua  startup_cfg.txt
Sandbox/assets/: Sprite-0001.json
Sandbox/src/: Main.cpp  Sandbox.cpp  Sandbox.hpp
Sandbox/src/AppStates/: SandboxState.cpp  SandboxState.hpp
Sandbox/src/Scenes/: Scene.cpp  Scene.hpp  SceneTwo.cpp  SceneTwo.hpp  TestScene.cpp  TestScene.hpp
Vifon/: CMakeLists.txt
Vifon/src/: Vifon.cpp  Vifon.hpp
